--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://arwaacademy:arwa12345678@localhost:5432/arwaschool?schema=public"
+DATABASE_URL="postgresql://arwaacademy:arwa12345678@postgres:5432/arwaschool?schema=public"
 NODE_ENV=development
 PORT=3000
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Y3V0ZS1rcmlsbC04LmNsZXJrLmFjY291bnRzLmRldiQ
