--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - .env
     depends_on:
       - postgres
+    command: sh -c "npx prisma migrate deploy && npm start"
 
 volumes:
   postgres_data:
